Add Repayment Frequency, Credit Vintage, and Own Book/Colending to intake, category, and LMS mapping
1. Repayment Frequency (V154): new field on LoanApplication, auto-derived from
   lms_tenure_unit at intake and shown next to Tenure on the New Product page.
   Not independently editable — the actual EMI cadence is fully determined by
   the Encore product/tenure-unit combination, so a free-choice value could
   describe a cadence Encore can't honor. Fixes a real bug along the way: the
   plain (non-EDI) KFS PDF hardcoded "Repayment Frequency: Monthly" regardless
   of the application's actual tenure unit.

2. Credit Vintage (V155): new scoping dimension (NEW / EXISTING_CUSTOMER /
   EXISTING_CUSTOMER_OF_GROUP) parallel to the existing borrowerType/
   loanProduct/intakeSegment triple on CustomerCategoryEntity and
   WorkflowConfig, RM-selected at intake and used in Category discovery/
   eligibility matching (CustomerCategoryEligibilityService.dimMatch).
   Existing rows backfill to 'ANY' so no existing bind or discovery match is
   affected. Wired into the actual production compatibility path —
   CategoryWorkflowCompatibility's raw-string evaluate() overload and
   CategoryWorkflowBindService.requireCompatible(), called from
   CustomerCategoryService — not the entity-based overload, which turned out
   to be dead code. Immutable once a Category is pinned onto an application
   (ApplicationConfigurationAuthority.assertCreditVintageUpdateAllowed).

3. Own Book / Colending (V156): new required, non-wildcard book_type
   dimension on external_product_mapping (OWN_BOOK / COLENDING), backed by a
   Postgres EXCLUDE constraint alongside the existing V153 overlap guard.
   Captured at Sanction, scoped to the ordinary Encore-mapped path only
   (anchor and ID-borrower sanction flows never touch external_product_mapping
   and are unaffected). ExternalProductMappingPinningService and its
   repository queries now resolve by book type; ExternalProductMappingAdminService
  